@@ -88,7 +88,7 @@ public class ZlifeVsZretadorCollision extends CollisionDetector {
 				z.live();
 				
 				//Zlife hit but not necessary die
-				c.setEnergy( c.getEnergy()-( (z.getRadius()+1)*10) );
+				c.setEnergy( c.getEnergy()-( (z.getRadius()+1)*4) );
 				return;
 			}
 			
